[metadata]
name = molpy
version = attr:molpy.VERSION
author = attr:molpy.AUTHOR
author_email = attr:molpy.AUTHOR_EMAIL
description = The fundamental package for computational chemistry with Python
long_description = attr: README.md
keywords = computational chemistry, 
liscence = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = False
packages = molpy
install_requires =
    freud
    numpy

[options.package_data]
* = *.txt


